--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,20 +6,39 @@
         android:layout_height="match_parent"
         tools:context=".view.MainActivity">
 
-    <Spinner
-            android:id="@+id/spinnerGenre"
+    <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
-            android:spinnerMode="dialog"
-            android:layout_height="50dp">
-    </Spinner>
+            android:foreground="@color/colorPrimary"
+            android:layout_height="150dp"/>
 
-    <GridView
-            android:id="@+id/gvMovies"
-            android:gravity="center_horizontal"
-            android:numColumns="auto_fit"
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/spinnerGenre">
-    </GridView>
+            android:padding="10dp"
+            android:orientation="vertical"
+            android:layout_marginTop="80dp">
+
+        <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="100dp">
+
+            <Spinner
+                    android:id="@+id/spinnerGenre"
+                    android:layout_width="match_parent"
+                    android:spinnerMode="dropdown"
+                    android:layout_gravity="center"
+                    android:layout_height="50dp"/>
+
+        </android.support.v7.widget.CardView>
+
+        <GridView
+                android:id="@+id/gvMovies"
+                android:gravity="center_horizontal"
+                android:numColumns="auto_fit"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+        </GridView>
+
+    </LinearLayout>
 
 </RelativeLayout>
